<resources>
    <string name="app_name">family_share</string>
    <string name="personFragment">个人中心</string>
    <string name="memorandumFragment">备忘录</string>
    <string name="shareFragment">分享</string>
    <string name="walletFragment">帐本</string>
    <string name="homeFragment">首页</string>
    <string name="add_word">string</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>